--- a/index.html
+++ b/index.html
@@ -30,12 +30,20 @@
         <div id="education"></div>
       </section>
       <section>
+        <h3>📜 Certifications</h3>
+        <ul id="certifications"></ul>
+      </section>
+      <section>
         <h3>🛠️ Skills</h3>
         <ul id="skills"></ul>
       </section>
       <section>
         <h3>🌐 Languages</h3>
         <ul id="languages"></ul>
+      </section>
+      <section>
+        <h3>🎯 Interests</h3>
+        <div id="interests" class="tags"></div>
       </section>
     </main>
     <footer>
