--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div id="interests" class="tags"></div>
       </section>
     </main>
-    <footer>
+    <footer class="no-print">
       <button id="download">📄 Download as PDF</button>
     </footer>
   </div>
