Add profile picture.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 </head>
 <body>
   <div class="container">
-    <header>
-      <h1 id="name"></h1>
-      <h2 id="title"></h2>
-      <p id="location"></p>
-      <p id="contacts"></p>
-      <a id="portfolio" href="#" target="_blank">Portfolio</a>
+    <header class="profile-header">
+      <img id="profile-pic" src="profile.png" alt="Profile picture of Giovanni Trovato" />
+      <div class="profile-info">
+        <h1 id="name"></h1>
+        <h2 id="title"></h2>
+        <p id="location"></p>
+        <p id="contacts"></p>
+        <a id="portfolio" href="#" target="_blank">Portfolio</a>
+      </div>
     </header>
     <main>
       <section>
