improve readability and layout

--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
         <h3>📜 Certifications</h3>
         <ul id="certifications"></ul>
       </section>
-      <section>
-        <h3>🛠️ Skills</h3>
-        <ul id="skills"></ul>
-      </section>
-      <section>
-        <h3>🌐 Languages</h3>
-        <ul id="languages"></ul>
-      </section>
-      <section>
-        <h3>🎯 Interests</h3>
-        <div id="interests" class="tags"></div>
-      </section>
+      <div class="grid-sections">
+        <section class="left-col">
+          <h3>🛠️ Skills</h3>
+          <ul id="skills"></ul>
+        </section>
+        <section class="right-col">
+          <h3>🌐 Languages</h3>
+          <ul id="languages"></ul>
+          <h3>🎯 Interests</h3>
+          <div id="interests" class="tags"></div>
+        </section>
+      </div>
     </main>
     <footer class="no-print">
       <button id="download">📄 Download as PDF</button>
