Add social links

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h2 id="title"></h2>
         <p id="location"></p>
         <p id="contacts"></p>
-        <a id="portfolio" href="#" target="_blank">Portfolio</a>
+        <div class="social-links"></div>
       </div>
     </header>
     <main>
